src/printsupport/kernel/qprinter_p.h
@@ -59,6 +59,7 @@
 #ifndef QT_NO_PRINTER
 
 #include "QtPrintSupport/qprinter.h"
+#include "QtPrintSupport/qprinterinfo.h"
 #include "QtPrintSupport/qprintengine.h"
 #include "QtCore/qpointer.h"
 
@@ -75,14 +76,19 @@ class Q_PRINTSUPPORT_EXPORT QPrinterPrivate
     Q_DECLARE_PUBLIC(QPrinter)
 public:
     QPrinterPrivate(QPrinter *printer)
-        : printEngine(0)
-        , paintEngine(0)
-        , q_ptr(printer)
-        , printRange(QPrinter::AllPages)
-        , use_default_engine(true)
-        , validPrinter(false)
-        , hasCustomPageMargins(false)
-        , hasUserSetPageSize(false)
+        : printEngine(0),
+          paintEngine(0),
+          realPrintEngine(0),
+          realPaintEngine(0),
+#ifndef QT_NO_PRINTPREVIEWWIDGET
+          previewEngine(0),
+#endif
+          q_ptr(printer),
+          printRange(QPrinter::AllPages),
+          use_default_engine(true),
+          validPrinter(false),
+          hasCustomPageMargins(false),
+          hasUserSetPageSize(false)
     {
     }
 
@@ -90,9 +96,11 @@ public:
 
     }
 
-    void init(QPrinter::PrinterMode mode);
+    void init(const QPrinterInfo &printer, QPrinter::PrinterMode mode);
 
-    void createDefaultEngines();
+    QPrinterInfo findValidPrinter(const QPrinterInfo &printer = QPrinterInfo());
+    void initEngines(QPrinter::OutputFormat format, const QPrinterInfo &printer);
+    void changeEngines(QPrinter::OutputFormat format, const QPrinterInfo &printer);
 #ifndef QT_NO_PRINTPREVIEWWIDGET
     QList<const QPicture *> previewPages() const;
     void setPreviewMode(bool);
